moving calendar to lib
Output.pm: sanatizing variable names
ran  perl -pi~ -e 's/\/includes\/calendar\//\/lib\/calendar\//' * in every staff template dir

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/histsearch.tmpl
@@ -7,13 +7,13 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="/intranet-tmpl/prog/en/includes/calendar/calendar-system.css">
+<link rel="stylesheet" type="text/css" href="/intranet-tmpl/prog/en/lib/calendar/calendar-system.css">
 <!-- End of additions -->
 
 <!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar.js"></script>
-<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar-setup.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar-en.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar-setup.js"></script>
 <!-- End of additions -->
 
 	<h1>Order search</h1>
@@ -36,7 +36,7 @@
 					<th><input type="text" name="title" value="<!-- TMPL_VAR name="title"-->" /></th>
 					<th><input type="text" name="author" value="<!-- TMPL_VAR name="author" -->" /></th>
 					<th><input type="text" name="name" value="<!-- TMPL_VAR name="name" -->" /></th>
-					<th>From <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" alt="calendar" />
+					<th>From <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" alt="calendar" />
 						<input type="text" readonly="readonly" size="10" id="from" name="fromplacedon" value="<!-- TMPL_VAR name="from_placed_on" -->" />
 						<script language="JavaScript" type="text/javascript">
 							function validate1(date) {
@@ -64,7 +64,7 @@
 								}
 							);
 						</script>
-						To <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="calendar" />
+						To <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="calendar" />
 						<input readonly="readonly" size="10" id="to" name="toplacedon" value="<!-- TMPL_VAR name="to_placed_on" -->" type="text" />
 						<script type="text/javascript">
 							function validate2(date) {
