--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/search.tmpl
@@ -73,7 +73,7 @@
 		<input type="hidden" name="excluding" value="" />
 		<input type="hidden" name="operator" value=">=" />
   <input type="text" size="10" id="datefrom" name="value" value="" />                                                      
-  <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" id="openCalendarFrom" style="cursor: pointer;" valign="top" />
+  <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarFrom" style="cursor: pointer;" valign="top" />
 
 <script type="text/javascript">
     Calendar.setup({
@@ -97,7 +97,7 @@
 		<input type="hidden" name="excluding" value="" />
 		<input type="hidden" name="operator" value="<=" />
   <input type="text" size="10" id="dateto" name="value" value="" />                                                      
-  <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" id="openCalendarTo" style="cursor: pointer;" valign="top" />
+  <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarTo" style="cursor: pointer;" valign="top" />
 
 <script type="text/javascript">
     Calendar.setup({
