--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Adult Patron Management</title>
-<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/includes/members.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/js/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
@@ -164,7 +164,7 @@
 			<!-- /TMPL_IF-->
 			Date of birth</label>
 			<input type="text" id="dateofbirth" name="dateofbirth" size="20" onchange="CheckDate(document.form.dateofbirth);" value="<!-- TMPL_VAR NAME="dateofbirth" -->">
-            <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="dateofbirth_button" />
+            <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="dateofbirth_button" />
       <script language="JavaScript" type="text/javascript">
         Calendar.setup(
           {
