--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryI.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryI.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Organisation Patron Management</title>
-<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/includes/members.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/js/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
@@ -384,7 +384,7 @@
                         <!-- /TMPL_IF-->
                         Arrival date</label>
                         <input type="text" id="dateenrolled" name="dateenrolled"  maxlength="10"	  size="10" onchange="CheckDate(document.form.dateenrolled);check_manip_date('verify');" value="<!-- TMPL_VAR NAME="dateenrolled" -->">
-            <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="dateenrolled_button" />
+            <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="dateenrolled_button" />
             <script language="JavaScript" type="text/javascript">
                 Calendar.setup(
                 {
