--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/acquisitions_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/acquisitions_stats.tmpl
@@ -3,11 +3,11 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!--TMPL_INCLUDE NAME="menus.inc" --><!-- TMPL_INCLUDE NAME="menu-reports.inc" -->
 <!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-system.css">
+<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css">
 <!-- End of additions --><!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-setup.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
 <!-- End of additions -->
 
 
@@ -74,7 +74,7 @@
 				<td><input type="radio" name="Line" value="aqbasket.closedate" /></td>
 				<td><input type="radio" name="Column" value="aqbasket.closedate" /> </td>
 				<td > From <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
-							<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
+							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
 								<script language="JavaScript" type="text/javascript">
 									function validate1(date) {
 										var day = date.getDate();
@@ -103,7 +103,7 @@
 									);
 								</script>
 					To <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
-						<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
+						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
 							<script type="text/javascript">
 								function validate2(date) {
 									var day = date.getDate();
@@ -150,7 +150,7 @@
 				<td><input type="radio" name="Line" value="aqorderdelivery.deliverydate" /></td>
 				<td><input type="radio" name="Column" value="aqorderdelivery.deliverydate" /></td>
 				<td > From <input type="text" readonly="readonly" size="10" id="fromRO" name="Filter" />
-							<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFromRO" style="cursor: pointer;" valign="top">
+							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFromRO" style="cursor: pointer;" valign="top">
 								<script language="JavaScript" type="text/javascript">
 									function validate1(date) {
 										var day = date.getDate();
@@ -179,7 +179,7 @@
 									);
 								</script>
 					To <input type="text" readonly="readonly" size="10" id="toRO" name="Filter" value="" />
-						<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarToRO" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
+						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarToRO" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
 							<script type="text/javascript">
 								function validate2(date) {
 									var day = date.getDate();
