move all css in includes to css dir
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/authorities/detail.tmpl
@@ -6,7 +6,7 @@
 <!-- TMPL_INCLUDE NAME="menu-authorities.inc" -->
 
 <!-- TMPL_IF Name="displayhierarchy"-->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/includes/hierarchy.css">
+<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR NAME="themelang" -->/css/hierarchy.css">
 <script language="JavaScript" type="text/javascript">
 function showParents(mynumber) {
   var parents=document.getElementsByName(mynumber+'p')
