--- a/koha-tmpl/intranet-tmpl/prog/en/modules/z3950/searchresult.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/z3950/searchresult.tmpl
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="shortcut icon" href="<!-- TMPL_VAR NAME='themelang' -->/includes/favicon.ico" type="image/x-icon" />
 <style type="text/css"> 
-    @import url(<!-- TMPL_VAR NAME='themelang' -->/includes/intranet.css);
+    @import url(<!-- TMPL_VAR NAME='themelang' -->/css/intranet.css);
 </style>
 </head>
 <body>
