--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/MARCdetail.tmpl
@@ -59,7 +59,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p class="subfield_line">
@@ -89,7 +89,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -119,7 +119,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -149,7 +149,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -179,7 +179,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -209,7 +209,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -239,7 +239,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -269,7 +269,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -299,7 +299,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
@@ -329,7 +329,7 @@
                         <!-- TMPL_VAR NAME="tag" -->
                     </div>
                 <!-- TMPL_ELSE -->
-                    <br />
+                    <div class="tag">
                 <!-- /TMPL_IF -->
             <!-- TMPL_LOOP NAME="subfield" -->
                 <p>
